Оптимизация изображения через ранее напсанный микросервис
https://github.com/artempogor/image-optimizer?tab=readme-ov-file
